tests/lean/run_meta1.lean.expected.out
run_meta1.lean:1:0-1:19: error: to use this command, include `import Lean.Meta.Basic`
