tests/lean/run_meta1.lean
run_meta guard true
